Added Broadcast message code.

--- a/www/templates/tab-broadcast.html
+++ b/www/templates/tab-broadcast.html
@@ -1,7 +1,7 @@
-<ion-view view-title="My Tab">
+<ion-view view-title="Broadcast">
   <ion-content>
     <ion-list>
-      Wasup You
+      This is a broadcast message.
     </ion-list>
   </ion-content>
 </ion-view>
